# TinyPyMCP

./: .dockerignore  .gitattributes  .gitignore  CONNECTORS.md  DEVNOTES.md  Dockerfile  GITHUB_PUBLISHING.md  README.md  docker-compose.yml  main.py  pyproject.toml
data/: README.md
logs/: README.md
scripts/: enrich_handbook.py  eval_handbook.py
src/: ai_usage.py  auth_middleware.py  estate.py  github_client.py  handbook_rag.py  kuma_client.py  ovh_ai_client.py  ovh_client.py  profiles.py  server.py  toolsets.py
src/cf/: client.py  r2.py
src/code/: architecture.py  audit.py  changes.py  deps.py  search_index.py  skeleton.py  symbols.py
src/exec/: runner.py
src/memory/: store.py
src/net/: fetch.py  security.py
src/oauth/: app.py  provider.py  store.py
src/sim/: manifest.py  registry.py
src/utils/: audit.py  file_ops.py  log_redaction.py  path_guard.py  rate_limit.py
src/vps/: channel.py  dockerctl.py  hostfs.py
tests/: smoke.py  smoke_d6.py
workspaces/: README.md
