[project]
name = "tinypymcp"
version = "0.1.0"
description = "Tiny precise file editor MCP server in Python (find + safe line-aware replace)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",   # FastMCP support
    "httpx>=0.27",
]

[project.scripts]
tinypymcp = "src.server:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
